# netSentinel

./: .gitignore  MVP.md  PRD.md  README.md  main.py  pyproject.toml  requirements.txt
api/: __init__.py  server.py
netsentinel/: __init__.py  alerts.py  api_server.py  config.py  dashboard.py  flow.py  ml.py  monitor.py  packet_agent.py  runtime_store.py  schemas.py  security.py
scripts/: train_model.py
tests/: test_alert_engine.py  test_flow_engine.py
