[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netsentinel"
version = "0.1.0"
description = "Real-time network anomaly detection MVP."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "joblib>=1.4.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "scapy>=2.5.0",
  "scikit-learn>=1.5.0",
  "streamlit>=1.44.0",
  "uvicorn>=0.30.0",
]

[tool.setuptools.packages.find]
include = ["netsentinel", "api"]
